@@ -1,4 +1,9 @@
 CHANGELOG v0.1.0 
+10/04/2017
+-Updated program flow
+-Added support for openssh keys
+-Source code has been cleaned up.
+
 09/29/2017
 -added scp function
 
